syntax = "proto3";

option csharp_namespace = "AuthenticationService.API.Grpc";
package auth;

// Authentication gRPC Service
service AuthService {
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc GetUserByUsername (GetUserByUsernameRequest) returns (GetUserByUsernameResponse);
}

// Messages
message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool is_valid = 1;
  UserInfo user = 2;
  string error = 3;
}

message GetUserByIdRequest {
  int32 user_id = 1;
}

message GetUserByIdResponse {
  UserInfo user = 1;
  string error = 2;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByUsernameResponse {
  UserInfo user = 1;
  string error = 2;
}

message UserInfo {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  string role = 6;
  int32 patient_id = 7;
  int32 doctor_id = 8;
  bool is_active = 9;
}